--- a/xdsclient/src/app/app.component.html
+++ b/xdsclient/src/app/app.component.html
@@ -1,25 +1,29 @@
 <html lang="en">
     <head>
-        <title>HH</title>
+        <title>XDS</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
     </head>
-<body>
     <app-xds-headerbar ></app-xds-headerbar>
-    <div class="col-md-16">
-        <div class="col-md-1">
-            <app-xds-tool-box></app-xds-tool-box>
+    <app-xds-header-signature ></app-xds-header-signature>
+
+<body class="container">
+    
+    <div>
+        <div>
+            
         </div>
-        <div class="col-md-10">
+        <div>
             <div>
                 <router-outlet></router-outlet>
             </div>
         </div>
-        <div class="col-md-1">
-        
-        </div>
-
     </div>
     <br> 
-    <app-xds-footer></app-xds-footer>
+
 </body>
+<app-xds-footer></app-xds-footer>
 </html>
