--- a/xdsclient/src/app/user/home-page/home-page.component.html
+++ b/xdsclient/src/app/user/home-page/home-page.component.html
@@ -1,1 +1,7 @@
-<p>home-page works!</p>
+
+<div>
+    <app-xds-info-main-box id="row1"></app-xds-info-main-box>
+</div>
+<div style="margin-top: 30px;">
+    <app-xds-news-highlights id="row2"></app-xds-news-highlights>
+</div>
