--- a/xdsclient/src/assets/components/xds-tool-box/xds-tool-box.component.html
+++ b/xdsclient/src/assets/components/xds-tool-box/xds-tool-box.component.html
@@ -1,7 +1,23 @@
+<div class="xds-tool-box">
+      <ul class="nav flex-column ">
+        <li class="nav-item" id="xds-tool-box-item">
+          <a class="nav-link" (click)="cc()" >Welcome</a>
+        </li>
+        <li class="nav-item" id="xds-tool-box-item">
+          <a class="nav-link " href="#">Sign in/up</a>
+        </li>
+        <li class="nav-item" id="xds-tool-box-item">
+          <a class="nav-link" href="login">Upload</a>
+        </li>
+        <li class="nav-item" id="xds-tool-box-item">
+          <a class="nav-link" href="#">Download</a>
+        </li>
+        <li class="nav-item" id="xds-tool-box-item">
+          <a class="nav-link" href="#">Analyze</a>
+        </li>
+        <li class="nav-item" id="xds-tool-box-item">
+          <a class="nav-link" href="#">Know how</a>
+        </li>
+      </ul>
+  </div>
 
-<ul>
-    <li><a href="#home">Home</a></li>
-    <li><a href="#news">News</a></li>
-    <li><a href="#contact">Contact</a></li>
-    <li><a href="#about">About</a></li>
-</ul>
