--- a/xdsclient/src/app/user/login-page/login-page.component.html
+++ b/xdsclient/src/app/user/login-page/login-page.component.html
@@ -1,1 +1,54 @@
-<p>login-page works!</p>
+                
+<html lang="en">
+    <body>
+       
+    
+    
+        <div class="container h-100">
+            <div class="d-flex justify-content-center h-100">
+                <div class="user_card">
+                    <div class="d-flex justify-content-center form_container">
+    
+                        <form>
+                            <div class="d-flex justify-content-center">
+                                <div class="brand_logo_container">
+                                    <img src="assets/Images/logobg.png" class="brand_logo" alt="Logo">
+                                </div>
+                            </div>
+                            <br>
+                            <div class="input-group mb-3">
+                                <div class="input-group-append">
+                                    <span class="input-group-text"><i class="fa fa-2x fa-at"></i></span>
+                                </div>
+                            </div>
+                            <div class="input-group mb-2">
+                                <div class="input-group-append">
+                                    <span class="input-group-text"><i class=" fa fa-2x fa-unlock-alt"></i></span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="custom-control custom-checkbox" >
+                                    <input type="checkbox" class="custom-control-input" id="customControlInline" >
+                                    <label class="custom-control-label" for="customControlInline">Remember me</label>
+                                </div>
+                            </div>
+                                <div class="d-flex justify-content-center mt-3 login_container">
+                                    <button type="submit" class="btn medrepo-submit-button" routerLink="/user/startpage" > Sign in</button>
+                                </div>
+                        </form>
+                    </div>
+            
+                    <div class="mt-4">
+                        <div class="d-flex justify-content-center links">
+                            Don't have an account? <a routerLink="/signup"class="ml-2">Sign Up</a>
+                        </div>
+                        <div class="d-flex justify-content-center links">
+                            <a href="#">Forgot your password?</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    
+    </body>
+    </html>
