--- a/xdsclient/src/assets/components/xds-footer/xds-footer.component.html
+++ b/xdsclient/src/assets/components/xds-footer/xds-footer.component.html
@@ -1,3 +1,6 @@
+<app-xds-footer-signature></app-xds-footer-signature>
+
+
 <footer class="footer">
     <h3>Copyright &copy; XDS team</h3>
 </footer>
