--- a/xdsclient/src/assets/components/xds-tool-box/xds-tool-box.component.css
+++ b/xdsclient/src/assets/components/xds-tool-box/xds-tool-box.component.css
@@ -1,11 +1,33 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 60px;
-  } 
-  
-li a {
-    display: block;
-    background-color: gray;
-  }
+.mat-menu-item{
+  font-size: 16px;
+  background-color: rgb(43, 39, 39);
+  color: aliceblue;
+}
+
+::ng-deep .mat-menu-content {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background: linear-gradient(to right, #0089fa 0%, #00cc66 100%)
+}
+
+.mat-menu-content {
+background-color: 'red' !important;
+}
+
+.xds-tool-box{
+  background-color: rgb(43, 39, 39);
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(16, 100, 250);
+}
+
+
+#xds-tool-box-item:hover{
+  background-color:white;
+  color: black;
+  cursor: pointer;}
+
+#xds-tool-box-item{
+  margin: 10px;
+
+}
