--- a/xdsclient/src/app/user/login-page/login-page.component.html
+++ b/xdsclient/src/app/user/login-page/login-page.component.html
@@ -12,7 +12,7 @@
                         <form>
                             <div class="d-flex justify-content-center">
                                 <div class="brand_logo_container">
-                                    <img src="assets/Images/logobg.png" class="brand_logo" alt="Logo">
+                                    <img src="assets/Images/xds.PNG" class="brand_logo" alt="Logo">
                                 </div>
                             </div>
                             <br>
