--- a/xdsclient/src/assets/components/xds-info-main-box/xds-info-main-box.component.html
+++ b/xdsclient/src/assets/components/xds-info-main-box/xds-info-main-box.component.html
@@ -1,7 +1,33 @@
 
 
 <div class="xds-info-main-box-style">
-    <app-xds-tool-box id="tool-box"></app-xds-tool-box>
-    <p id="details-box">xds-info-main-box works!</p>
-    <p id="sub-menu">xds-info-main-box works!</p>
+    <app-xds-tool-box id="tool-box" (click)="ToolBoxIsClicked()" (xdsActiveButton)="buttonId=$event"></app-xds-tool-box>
+    
+    <div id="sub-menu">xds-info-main-box works!
+        <div id="London" class="tabcontent">
+            <h3>London</h3>
+            <p>London is the capital city of England.</p>
+          </div>
+
+          <div id="Paris" class="tabcontent">
+            <h3>Paris</h3>
+            <p>Paris is the capital of France.</p>
+          </div>
+          
+          
+      <div id="Tokyo" class="tabcontent">
+        <h3>Tokyo</h3>
+        <p>Tokyo is the capital of Japan.</p>
+      </div>
+
+    </div>
+    <div id="details-box">
+        
+    </div>
+
+
+      
+
+
+
 </div>
