--- a/xdsclient/src/assets/components/xds-tool-box/xds-tool-box.component.html
+++ b/xdsclient/src/assets/components/xds-tool-box/xds-tool-box.component.html
@@ -1,22 +1,22 @@
 <div class="xds-tool-box">
       <ul class="nav flex-column ">
         <li class="nav-item" id="xds-tool-box-item">
-          <a class="nav-link" (click)="cc()" >Welcome</a>
+          <a class="nav-link" (click)="WelcomeIsClicked()" >Welcome</a>
         </li>
         <li class="nav-item" id="xds-tool-box-item">
-          <a class="nav-link " href="#">Sign in/up</a>
+          <a class="nav-link " (click)="SignInUpIsClicked()" >Sign in/up</a>
         </li>
         <li class="nav-item" id="xds-tool-box-item">
-          <a class="nav-link" href="login">Upload</a>
+          <a class="nav-link" (click)="UploadIsClicked()" >Upload</a>
         </li>
         <li class="nav-item" id="xds-tool-box-item">
-          <a class="nav-link" href="#">Download</a>
+          <a class="nav-link" (click)="DownloadIsClicked()" >Download</a>
         </li>
         <li class="nav-item" id="xds-tool-box-item">
-          <a class="nav-link" href="#">Analyze</a>
+          <a class="nav-link" (click)="AnalyzeIsClicked()" >Analyze</a>
         </li>
         <li class="nav-item" id="xds-tool-box-item">
-          <a class="nav-link" href="#">Know how</a>
+          <a class="nav-link" (click)="KnowHowIsClicked()" >Know how</a>
         </li>
       </ul>
   </div>
