--- a/xdsclient/src/app/user/login-page/login-page.component.html
+++ b/xdsclient/src/app/user/login-page/login-page.component.html
@@ -1,11 +1,11 @@
                 
 <html lang="en">
-    <body>
+    <body >
        
     
     
-        <div class="container h-100">
-            <div class="d-flex justify-content-center h-100">
+        <div class="container">
+            <div class="d-flex justify-content-center ">
                 <div class="user_card">
                     <div class="d-flex justify-content-center form_container">
     
@@ -18,12 +18,15 @@
                             <br>
                             <div class="input-group mb-3">
                                 <div class="input-group-append">
-                                    <span class="input-group-text"><i class="fa fa-2x fa-at"></i></span>
+                                    
+                                    <span class="input-group-text"><i class="fa fa-at"></i></span>
+                                    <input type="text" id="username-input" placeholder="medrepoPlaceHolder">
                                 </div>
                             </div>
                             <div class="input-group mb-2">
                                 <div class="input-group-append">
-                                    <span class="input-group-text"><i class=" fa fa-2x fa-unlock-alt"></i></span>
+                                    <span class="input-group-text"><i class=" fa fa-unlock-alt"></i></span>
+                                    <input type="text"  placeholder="medrepoPlaceHolder">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -32,12 +35,12 @@
                                     <label class="custom-control-label" for="customControlInline">Remember me</label>
                                 </div>
                             </div>
-                                <div class="d-flex justify-content-center mt-3 login_container">
-                                    <button type="submit" class="btn medrepo-submit-button" routerLink="/user/startpage" > Sign in</button>
-                                </div>
+                              
                         </form>
                     </div>
-            
+                    <div class="d-flex justify-content-center mt-3 login_container">
+                        <button (click)="onTextChange()" > Sign in</button>
+                    </div>
                     <div class="mt-4">
                         <div class="d-flex justify-content-center links">
                             Don't have an account? <a routerLink="/signup"class="ml-2">Sign Up</a>
