--- a/xdsclient/src/assets/components/xds-news-highlights/xds-news-highlights.component.html
+++ b/xdsclient/src/assets/components/xds-news-highlights/xds-news-highlights.component.html
@@ -1,28 +1,29 @@
 
 
-<div class="row">
-<div class="card xdr-card-style" >
-    <img class="card-img-top"  alt="Card image cap">
+<div id="main">
+
+<!-- <div class="card xdr-card-style" >
+    <img class="card-img-top"  alt="Card image cap" src="../../../assets/Images/xds.PNG">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">New 1</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
 
   <div class="card xdr-card-style">
-    <img class="card-img-top"  alt="Card image cap">
+    <img class="card-img-top"  alt="Card image cap" src="../../../assets/Images/xds.PNG">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">New 2</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
 
   <div class="card xdr-card-style" >
-    <img class="card-img-top"  alt="Card image cap">
+    <img class="card-img-top"  alt="Card image cap" src="../../../assets/Images/xds.PNG">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">New 3</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
@@ -31,29 +32,32 @@
 
 <div class="row">
   <div class="card xdr-card-style" >
-    <img class="card-img-top"  alt="Card image cap">
+    <img class="card-img-top"  alt="Card image cap" src="../../../assets/Images/xds.PNG">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">New 4</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
 
   <div class="card xdr-card-style" >
-    <img class="card-img-top"  alt="Card image cap">
+    <img class="card-img-top" alt="Card image cap" src="../../../assets/Images/xds.PNG">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">New 5</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
 
   <div class="card xdr-card-style" >
-    <img class="card-img-top"  alt="Card image cap">
+    <img class="card-img-top"  alt="Card image cap" src="../../../assets/Images/xds.PNG">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">New 6</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
-  </div>
+  </div> -->
+</div>
+
+<div class="row">
 </div>
