--- a/xdsclient/src/assets/components/xds-tool-box/xds-tool-box.component.html
+++ b/xdsclient/src/assets/components/xds-tool-box/xds-tool-box.component.html
@@ -1,21 +1,21 @@
 <div class="xds-tool-box">
       <ul class="nav flex-column ">
-        <li class="nav-item" id="xds-tool-box-item">
+        <li class="nav-item xds-tool-box-item" id="1a">
           <a class="nav-link" (click)="WelcomeIsClicked()" >Welcome</a>
         </li>
-        <li class="nav-item" id="xds-tool-box-item">
+        <li class="nav-item xds-tool-box-item" id="2a">
           <a class="nav-link " (click)="SignInUpIsClicked()" >Sign in/up</a>
         </li>
-        <li class="nav-item" id="xds-tool-box-item">
+        <li class="nav-item xds-tool-box-item" id="3a">
           <a class="nav-link" (click)="UploadIsClicked()" >Upload</a>
         </li>
-        <li class="nav-item" id="xds-tool-box-item">
+        <li class="nav-item xds-tool-box-item" id="4a">
           <a class="nav-link" (click)="DownloadIsClicked()" >Download</a>
         </li>
-        <li class="nav-item" id="xds-tool-box-item">
+        <li class="nav-item xds-tool-box-item" id="5a">
           <a class="nav-link" (click)="AnalyzeIsClicked()" >Analyze</a>
         </li>
-        <li class="nav-item" id="xds-tool-box-item">
+        <li class="nav-item xds-tool-box-item" id="6a">
           <a class="nav-link" (click)="KnowHowIsClicked()" >Know how</a>
         </li>
       </ul>
