--- a/xdsclient/src/app/user/login-page/login-page.component.html
+++ b/xdsclient/src/app/user/login-page/login-page.component.html
@@ -1,9 +1,10 @@
                 
 <html lang="en">
-    <body>
-       
-    
-    
+    <head>
+        <!-- ===== link to font-awsom icons cloud ===== -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    </head>
+    <body> 
         <div class="container h-100">
             <div class="d-flex justify-content-center h-100">
                 <div class="user_card">
@@ -17,14 +18,15 @@
                             </div>
                             <br>
                             <div class="input-group mb-3">
-                                <div class="input-group-append">
-                                    <span class="input-group-text"><i class="fa fa-2x fa-at"></i></span>
-                                </div>
+                                    <span class="input-group-text"><i class="fa fa-x fa-user"></i>
+                                    </span>
+                                    <input type="text" id="loginname" placeholder="loginname">
                             </div>
                             <div class="input-group mb-2">
-                                <div class="input-group-append">
-                                    <span class="input-group-text"><i class=" fa fa-2x fa-unlock-alt"></i></span>
-                                </div>
+                                    <span class="input-group-text">
+                                        <i class=" fa fa-x fa-unlock-alt"></i>
+                                    </span>
+                                    <input type="password" id="password" placeholder="password">
                             </div>
                             <div class="form-group">
                                 <div class="custom-control custom-checkbox" >
@@ -33,11 +35,12 @@
                                 </div>
                             </div>
                                 <div class="d-flex justify-content-center mt-3 login_container">
-                                    <button type="submit" class="btn medrepo-submit-button" routerLink="/user/startpage" > Sign in</button>
+                                    
                                 </div>
                         </form>
                     </div>
-            
+                    <button id="signin-btn"> Sign in</button>
+
                     <div class="mt-4">
                         <div class="d-flex justify-content-center links">
                             Don't have an account? <a routerLink="/signup"class="ml-2">Sign Up</a>
