--- a/xdsclient/src/assets/components/xds-header-signature/xds-header-signature.component.css
+++ b/xdsclient/src/assets/components/xds-header-signature/xds-header-signature.component.css
@@ -11,6 +11,7 @@
     grid-template-areas:"sp sp" "im search" "im2 social" ;
     grid-template-columns:50% 50% ;
     grid-template-rows:50px 100px 50px ;
+    margin-bottom: 20px;
 }
 
 .box{
