--- a/xdsclient/src/assets/components/xds-tool-box/xds-tool-box.component.css
+++ b/xdsclient/src/assets/components/xds-tool-box/xds-tool-box.component.css
@@ -22,12 +22,16 @@ background-color: 'red' !important;
 }
 
 
-#xds-tool-box-item:hover{
+.xds-tool-box-item:hover{
   background-color:white;
   color: black;
   cursor: pointer;}
 
-#xds-tool-box-item{
+.xds-tool-box-item{
   margin: 10px;
 
+}
+
+.active{
+  background-color:green;
 }
