--- a/xdsclient/src/app/user/home-page/home-page.component.html
+++ b/xdsclient/src/app/user/home-page/home-page.component.html
@@ -1,7 +1,27 @@
 
 <div>
-    <app-xds-info-main-box id="row1"></app-xds-info-main-box>
+    <!-- <app-xds-info-main-box id="row1"></app-xds-info-main-box> -->
+    <h1>
+        Login to your account to enjoy all features.
+    </h1>
+
+        <a href="\login" class="btn btn-primary">Go to Login page</a>
+
 </div>
+<div>
+    <!-- <app-xds-info-main-box id="row1"></app-xds-info-main-box> -->
+    <h1>
+        If you dont have an account, you can sign up.
+    </h1>
+
+        <a href="\signup" class="btn btn-primary">Go to sign up page</a>
+    
+        <button (click)="Clicked()">
+            Click me
+        </button>
+</div>
+
+
 <div style="margin-top: 30px;">
     <app-xds-news-highlights id="row2"></app-xds-news-highlights>
 </div>
