--- a/xdsclient/src/app/user/login-page/login-page.component.html
+++ b/xdsclient/src/app/user/login-page/login-page.component.html
@@ -20,13 +20,13 @@
                                 <div class="input-group-append">
                                     
                                     <span class="input-group-text"><i class="fa fa-at"></i></span>
-                                    <input type="text" id="username-input" placeholder="medrepoPlaceHolder">
+                                    <input type="text" id="username-input" placeholder=" user name">
                                 </div>
                             </div>
                             <div class="input-group mb-2">
                                 <div class="input-group-append">
                                     <span class="input-group-text"><i class=" fa fa-unlock-alt"></i></span>
-                                    <input type="text"  placeholder="medrepoPlaceHolder">
+                                    <input type="text"  placeholder="password">
                                 </div>
                             </div>
                             <div class="form-group">
