--- a/xdsclient/src/app/user/sign-up-page/sign-up-page.component.html
+++ b/xdsclient/src/app/user/sign-up-page/sign-up-page.component.html
@@ -1,1 +1,26 @@
-<p>sign-up-page works!</p>
+
+
+
+<form class="p-4">
+  <div class="form-group">
+    <label for="exampleDropdownFormEmail2">Email address</label>
+    <input type="email" class="form-control" placeholder="email@example.com">
+  </div>
+  <div class="form-group">
+    <label for="exampleDropdownFormEmail2">Confirm email address</label>
+    <input type="email" class="form-control"  placeholder="email@example.com">
+  </div>
+  <div class="form-group">
+    <label for="exampleDropdownFormPassword2">Password</label>
+    <input type="password" class="form-control"  placeholder="Password">
+  </div>
+  <div class="form-group">
+    <label for="exampleDropdownFormPassword2">Confirm password</label>
+    <input type="password" class="form-control" placeholder="Password">
+  </div>
+  <div class="form-group">
+    <label for="exampleDropdownFormPassword2">Login name </label>
+    <input type="text" class="form-control"  placeholder="Password">
+  </div>
+  <button type="submit" class="btn btn-primary">Sign in</button>
+</form>
