--- a/xdsclient/src/app/user/login-page/login-page.component.html
+++ b/xdsclient/src/app/user/login-page/login-page.component.html
@@ -1,9 +1,6 @@
                 
 <html lang="en">
     <body >
-       
-    
-    
         <div class="container">
             <div class="d-flex justify-content-center ">
                 <div class="user_card">
@@ -26,7 +23,7 @@
                             <div class="input-group mb-2">
                                 <div class="input-group-append">
                                     <span class="input-group-text"><i class=" fa fa-unlock-alt"></i></span>
-                                    <input type="text"  placeholder="password">
+                                    <input type="password" id="userpwd-input" placeholder="password">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -39,7 +36,7 @@
                         </form>
                     </div>
                     <div class="d-flex justify-content-center mt-3 login_container">
-                        <button (click)="onTextChange()" > Sign in</button>
+                        <button (click)="onSignIn()" > Sign in</button>
                     </div>
                     <div class="mt-4">
                         <div class="d-flex justify-content-center links">
