--- a/xdsclient/src/app/app.component.html
+++ b/xdsclient/src/app/app.component.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     </head>
-    <app-xds-headerbar ></app-xds-headerbar>
-    <app-xds-header-signature ></app-xds-header-signature>
+    <app-xds-headerbar [headerUMItems]="headerBarUMItems" [headerItems]="headerBarItems" ></app-xds-headerbar>
+    <app-xds-header-signature style="margin-top: 100px;" ></app-xds-header-signature>
 
 <body class="container">
     
