--- a/xdsclient/src/app/user/sign-up-page/sign-up-page.component.html
+++ b/xdsclient/src/app/user/sign-up-page/sign-up-page.component.html
@@ -22,5 +22,5 @@
     <label for="exampleDropdownFormPassword2">Login name </label>
     <input type="text" class="form-control"  placeholder="Password">
   </div>
-  <button type="submit" class="btn btn-primary">Sign in</button>
+  <button type="submit" class="btn btn-primary">Create an account</button>
 </form>
