--- a/xdsclient/src/assets/components/xds-header-signature/xds-header-signature.component.css
+++ b/xdsclient/src/assets/components/xds-header-signature/xds-header-signature.component.css
@@ -12,6 +12,8 @@
     grid-template-columns:50% 50% ;
     grid-template-rows:50px 100px 50px ;
     margin-bottom: 20px;
+    margin-top: 20px;
+
 }
 
 .box{
