--- a/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.css
+++ b/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.css
@@ -1,38 +1,45 @@
 .xds-nave-bar{
   background-color: grey;
-  margin-top: -10px;
+  margin-top: -20px;
   position: fixed;
   width: 100%;
   z-index: 100;
+}     
+
+.btn-circle.btn-md {
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  font-size: 10px;
+  text-align: center;
+}
+.dropdown {
+  position: relative;
+  display:block;
+  text-decoration: none;
+  color: black;
 }
 
-/* ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0px 100px;
-    overflow: hidden;
-    background-color: grey;
+.dropdown a:hover{
+  text-decoration: none;
+  color: black;
+  background-color: grey;
+  cursor: pointer;
+  color: black;
+  border: 1px solid black;
 
+}
+.dropdown-content {
+  position:absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
 
-  }
-  
-  li {
-      align-items: center;
-  }
-  
-  li a {
-    display: block;
-    color: black;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover:not(.active) {
-    background-color: #111;
-    color:white;
-  }
-  
-  .active {
-    background-color: black;
-    color:white;
-  } */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
