--- a/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.html
+++ b/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.html
@@ -1,34 +1,38 @@
   
 <div>
-    <nav class="navbar navbar-expand-lg navbar-light xds-nave-bar ">
-        <div class="collapse navbar-collapse container" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="#">Disabled</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
+  <nav class="navbar navbar-expand-lg navbar-light xds-nave-bar ">
+    <div class="collapse navbar-collapse container" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto" >
+        <li class="nav-item" *ngFor="let item of headerItems">
+          <a class="nav-link" [href]="item.RouterLink">{{item.Name}}</a>
+        </li>
+
+
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        
+        <div>
+          <button type="button" (click)="OpenUserMenu()" class="btn btn-circle btn-md dropdown" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-user fa-2x"></i>
+          </button>
+          <div id="userMenuContents" class="dropdown-content" style="display: none;">
+            <div class="dropdown">
+                <a *ngFor="let item of headerUMItems"  [class]="item.Button" [href]="item.RouterLink"  >
+                  <i  >
+                    {{item.Name}}
+                  </i>
+                </a> 
+                <a class="fa fa-cog" href="#">
+                  <i  >
+                    Setting
+                  </i>
+                </a>
+            </div>        
+          </div>
         </div>
-      </nav>
+      </form>
+    </div>
+  </nav>
 </div>
 
