--- a/xdsclient/src/assets/components/xds-footer-signature/xds-footer-signature.component.html
+++ b/xdsclient/src/assets/components/xds-footer-signature/xds-footer-signature.component.html
@@ -1,1 +1,19 @@
-<p>xds-footer-signature works!</p>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
+
+<div class="content" >
+   
+    <div class="slide">
+          <img src="https://www.uni-siegen.de/presse/relaunch/downloads/cd/uni-siegen_farbig_150x150_rgb.jpg?lang=de">
+    </div>
+      <div class="slide"><img src="https://www.uni-siegen.de/presse/relaunch/downloads/cd/fakiv_wort_rgb_130.jpg?lang=de"></div>
+      <div class="slide"><img src="../../../assets/Images/xfel.png"></div>
+      <div class="slide"><img src="../../Images/img2.JPG"></div>
+      <div class="slide"><img src="../../Images/img2.JPG"></div>
+      <div class="slide"><img src="../../Images/img2.JPG"></div>
+      
+</div>
