--- a/xdsclient/src/app/user/home-page/home-page.component.html
+++ b/xdsclient/src/app/user/home-page/home-page.component.html
@@ -19,5 +19,5 @@
 
 
 <div style="margin-top: 30px;">
-    <app-xds-news-highlights id="row2"></app-xds-news-highlights>
+    <!-- <app-xds-news-highlights id="row2"></app-xds-news-highlights> -->
 </div>
