--- a/xdsclient/src/app/user/login-page/login-page.component.css
+++ b/xdsclient/src/app/user/login-page/login-page.component.css
@@ -3,12 +3,12 @@
     width: 350px;
     margin-top: auto;
     margin-bottom: auto;
-    background: #00cc66;
+    background: #ffffff;
     position: relative;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding: 10px;
+    padding: 1px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -21,13 +21,13 @@
     width: 170px;
     top: 20px;
     border-radius: 5%;
-    background: #0089fa;
-    padding: 10px;
+    background: #3a6cf4 ;
+    padding: 2px;
     text-align: center;
 }
 .brand_logo {
-    height: 50px;
-    width: 150px;
+    height: 100%;
+    width: 100%;
     border-radius: 5%;
     border: 2px solid white;
 }
@@ -44,6 +44,7 @@
     color: white !important;
     border: 0 !important;
     border-radius: 0.25rem 0 0 0.25rem !important;
+    align-items: center ;
 }
 .input_user,
 .input_pass:focus {
