--- a/xdsclient/src/app/user/login-page/login-page.component.html
+++ b/xdsclient/src/app/user/login-page/login-page.component.html
@@ -1,7 +1,5 @@
-                
-<html lang="en">
-    <body >
-        <div class="container">
+
+        <div>
             <div class="d-flex justify-content-center ">
                 <div class="user_card">
                     <div class="d-flex justify-content-center form_container">
@@ -9,7 +7,7 @@
                         <form>
                             <div class="d-flex justify-content-center">
                                 <div class="brand_logo_container">
-                                    <img src="assets/Images/xds.PNG" class="brand_logo" alt="Logo">
+                                    <img src="../../../assets/Images/logo.png" class="brand_logo" alt="Logo">
                                 </div>
                             </div>
                             <br>
@@ -50,5 +48,5 @@
             </div>
         </div>
     
-    </body>
-    </html>
+ 
+
