--- a/xdsclient/src/assets/components/xds-footer/xds-footer.component.html
+++ b/xdsclient/src/assets/components/xds-footer/xds-footer.component.html
@@ -1,6 +1,11 @@
-<app-xds-footer-signature></app-xds-footer-signature>
 
 
-<footer class="footer">
-    <h3>Copyright &copy; XDS team</h3>
-</footer>
+    <footer class="footer">
+        <p class="footer-title">Copyrights @ <span>University of Siegen, Germany</span></p>
+        <div class="social-icons">
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+        </div>
+    </footer>
