--- a/xdsclient/src/app/user/user-datasets/user-datasets.component.html
+++ b/xdsclient/src/app/user/user-datasets/user-datasets.component.html
@@ -1,3 +1,92 @@
-<ul class="list-group" *ngFor='let data of filesArr; let i=index;'>
-    <li class="list-group-item">  {{data}} </li>
-</ul>  
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
+    <title>Youtube</title>
+</head>
+
+<div  *ngFor='let data of metadataArr; let i=index;'>
+    <div class="dataset-item">
+        <div class="dataset-name">
+            <ul class="list-group" >
+                <li class="list-group-item">  {{data.dataset_name}} </li>
+            </ul>  
+        </div>
+        <div class="function-buttons">
+            <a (click)="InfoFunctionBtnClicked(i)">
+                <i class="material-icons">
+                    info
+                </i>
+            </a>
+            <a (click)="EditFunctionBtnClicked(i)">
+                <i class="material-icons">
+                    edit
+                </i>
+            </a>
+            <a (click)="OpenFunctionBtnClicked(i)">
+                <i class="material-icons">
+                    open_in_new
+                </i>
+            </a>
+            <a (click)="DeleteFunctionBtnClicked(i)">
+                <i class="material-icons">
+                    delete_forever
+                </i>
+            </a>
+        </div>
+    </div>
+    <div class="dataset-details" [id]="data.dataset_name">
+        <div class="detail-item">
+            <h6>Dataset Name:
+                <span>
+                    {{data.dataset_name}} 
+                </span>
+            </h6>
+
+        </div>
+        <div class="detail-item">
+            <h6>Method Name:
+                <span>
+                    {{data.method_name}} 
+                </span>
+            </h6>
+
+        </div>
+        <div class="detail-item">
+            <h6>Radiation Facility Name: 
+                <span>
+                    {{data.rad_facility}} 
+                </span>
+            </h6>
+
+        </div>
+        <div class="detail-item">
+            <h6>Sample Discription:
+                <span>
+                    {{data.sample}} 
+                </span>
+            </h6>
+        </div>
+        <div class="detail-item">
+            <h6>Added Since:
+                <span>
+                    {{data.days}} days 
+                </span>
+            </h6>
+        </div>
+        <div class="detail-item">
+            <h6>Summary:
+                <span>
+                    {{data.summery}} 
+                </span>
+            </h6>
+        </div>
+        <a class="hide-btn" (click)="CloseDetailClicked(i)">
+            <i class="material-icons">
+                expand_less
+            </i>
+        </a>
+    </div>
+</div>
