--- a/xdsclient/src/app/app.component.css
+++ b/xdsclient/src/app/app.component.css
@@ -10,7 +10,7 @@ body{
     background-attachment: fixed;
 }
 
-
+/* 
 
 @media (max-width:1030px){
     .container{
@@ -54,4 +54,4 @@ body{
         align-items: center;
     }
 
-}
+} */
