--- a/xdsclient/src/app/app.component.html
+++ b/xdsclient/src/app/app.component.html
@@ -7,6 +7,11 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
+
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
+
     </head>
     <app-xds-headerbar [headerUMItems]="headerBarUMItems" [headerItems]="headerBarItems" ></app-xds-headerbar>
     <!-- <app-xds-header-signature style="margin-top: 100px;" ></app-xds-header-signature> -->
