--- a/xdsclient/src/app/user/user-profile-page/user-profile-page.component.html
+++ b/xdsclient/src/app/user/user-profile-page/user-profile-page.component.html
@@ -16,9 +16,12 @@
     </div>
   </div>
 </section>
+<section>
+  <a  href="userdashboard" class="main-btn">Go to your dashboard</a>
+</section>
 
 <section class="user-tabs">
-  <ul class="nav nav-tabs xds-tab-goupe" (click)="RecentActivities($event)">
+  <ul class="nav nav-tabs xds-tab-goupe" (click)="TabItemClicked($event)">
     <li class="nav-item xds-active" id="tab1m">
       <a class="nav-link" id="tab1">Recent activities</a>
     </li>
