--- a/xdsclient/src/app/user/user-profile-page/user-profile-page.component.css
+++ b/xdsclient/src/app/user/user-profile-page/user-profile-page.component.css
@@ -49,3 +49,20 @@
     background-color: #3a6cf4 ;
     color: #fff;
 }
+
+.main-btn {
+    text-decoration: none;
+    color: #fff;
+    background-color: #3a6cf4;
+    display: inline-block;
+    padding: 0.9375em 2.1875em;
+    letter-spacing: 1px;
+    border-radius: 15px;
+    margin: 20px;
+    transition: 0.7s ease;
+}
+
+.main-btn:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+}
