--- a/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.html
+++ b/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.html
@@ -3,6 +3,7 @@
   <div>
 
     <nav class="navigation">
+      <div id="nav-landing" style="display: none;">
       <a href="https://xray.physik.uni-siegen.de/home/" class="logo">
         <img src="../../../assets/Images/logo.png">
       </a>
@@ -12,6 +13,14 @@
         <a id="news" (click)="Scroll($event)">News</a>
         <a id="members" (click)="Scroll($event)">Members</a>
         <a id="contact" (click)="Scroll($event)">Contact</a>
+      </div>
+      <div id="nav-other">
+        <a href="https://xray.physik.uni-siegen.de/home/" class="logo">
+          <img src="../../../assets/Images/logo.png">
+        </a>
+        <a href="#" >Home</a>
+      </div>
+
     </nav>
   </div>
   <div>
