--- a/xdsclient/src/app/user/user-datasets/user-datasets.component.html
+++ b/xdsclient/src/app/user/user-datasets/user-datasets.component.html
@@ -4,7 +4,17 @@
     <div class="dataset-item">
         <div class="dataset-name">
             <ul class="list-group" >
-                <li class="list-group-item">  {{data.dataset_name}} </li>
+                <li class="list-group-item">  {{data.dataset_name}} 
+                    <span [ngClass]="hasMetaData? 'material-icons green' : 'material-icons red'">
+                        monitoring        
+                    </span>
+                    <span [ngClass]="hasReadMe? 'material-icons green' : 'material-icons red'">
+                        description
+                    </span>
+                    <span [ngClass]="hasRawData? 'material-icons green' : 'material-icons  red'">
+                        database
+                    </span>
+                </li>
             </ul>  
         </div>
         <div class="function-buttons">
