--- a/xdsclient/src/app/user/user-profile-page/user-profile-page.component.html
+++ b/xdsclient/src/app/user/user-profile-page/user-profile-page.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="col-md-8">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">{{fn}} {{ln}}</h5>
           <p class="card-text"></p>
         </div>
       </div>
