APIs and frontend

--- a/xdsclient/src/app/user/user-dashboard/user-dashboard.component.html
+++ b/xdsclient/src/app/user/user-dashboard/user-dashboard.component.html
@@ -10,15 +10,11 @@
             </a>
             <hr>
             <a  id="info-home" class="nav-link active">
-                <i  class="material-icons">
-                    home
-                </i>
+                <i class="fas fa-home"></i>
                 <span > Home</span>
             </a>
             <a id="info-xpcs" class="nav-link">
-                <i class="material-icons">
-                    flare
-                </i>
+                <i class="fas fa-dna"></i>
                 <span> XPCS</span>
             </a>
             <a id="info-gisaxs" class="nav-link">
