--- a/xdsclient/src/app/dataset/edit-dataset-details/edit-dataset-details.component.html
+++ b/xdsclient/src/app/dataset/edit-dataset-details/edit-dataset-details.component.html
@@ -4,12 +4,12 @@
       <input type="email" class="form-control" placeholder="email@example.com">
     </div>
     <div class="form-group">
-      <label for="exampleDropdownFormEmail2">Method name</label>
+      <label for="exampleDropdownFormEmail2">Method</label>
       <input type="email" class="form-control"  placeholder="email@example.com">
     </div>
     <div class="form-group">
-      <label for="exampleDropdownFormPassword2">Login name </label>
+      <label for="exampleDropdownFormPassword2">Radiation Facility </label>
       <input type="text" class="form-control"  placeholder="Password">
     </div>
-    <button type="submit" class="btn btn-primary">Create an account</button>
+    <button type="submit" class="btn btn-primary">Ok</button>
   </form>
