--- a/xdsclient/src/assets/components/dashboaerd-pages/add-new-dataset-dashboard/add-new-dataset-dashboard.component.html
+++ b/xdsclient/src/assets/components/dashboaerd-pages/add-new-dataset-dashboard/add-new-dataset-dashboard.component.html
@@ -1,11 +1,81 @@
-<div style="text-align: center">  
+
+<section class="cards" id="servicesl">
+  <h2 class="title">Dataset type</h2>
+  <div class="content">
+      <div id="1d" class="card" (click)="oneDImageClicked()">
+          <div class="icon">
+              <i class="fas fa-chart-bar"></i>
+          </div>
+          <div class="info">
+              <h3>1D Images</h3>
+          </div>
+      </div>
+      <div id="2d" class="card" (click)="twoDImageClicked()">
+          <div class="icon">
+              <i class="fas fa-image"></i>
+          </div>
+          <div class="info">
+              <h3>2D Images</h3>
+          </div>
+      </div>
+      <div id="3d" class="card" (click)="threeDImageClicked()">
+          <div class="icon">
+              <i class="fas fa-images"></i>
+          </div>
+          <div class="info">
+              <h3>3D Images</h3>
+          </div>
+      </div>
+  </div>
+</section>
+<!-- <section class="disabled"> -->
+<section id="details_section" class="disabled">
+  <hr class="rounded">
+  <h2 class="title">Dataset details</h2>
+  <form class="formstyle">
+    <div class="form-group">
+      <label for="exampleDropdownFormEmail2">Dataset Name *</label>
+      <input type="email" class="form-control" placeholder="dataset_name">
+    </div>
+    <div class="form-group">
+      <label for="exampleDropdownFormEmail2">Method *</label>
+      <input type="email" class="form-control"  placeholder="XPCS">
+    </div>
+    <div class="form-group">
+      <label for="exampleDropdownFormPassword2">Radiation Facility * </label>
+      <input type="text" class="form-control"  placeholder="DESY">
+    </div>
+    <div class="form-group">
+      <label for="exampleDropdownFormPassword2">Experiment Date * </label>
+      <input type="date" class="form-control"  placeholder="01.01.1900">
+    </div>
+    <div class="form-group">
+      <label for="exampleDropdownFormPassword2">Sample Discription * </label>
+      <input type="text" class="form-control"  placeholder="SiO4 solution with H2O ">
+    </div>
+    <div class="form-group">
+      <label for="exampleDropdownFormPassword2">Notes </label>
+      <input type="text" class="form-control"  placeholder="notes">
+    </div>
+  </form>
+  <div style="text-align: center">
+    <button class="main-btn" >Next</button>
+  </div>
+</section>
+
+
+
+<section class="disabled">
+  <hr class="rounded">
+  <div style="text-align: center">  
       <div>
-        <input type="file" name="image" (change)="selectFile($event)" />
+        <input type="file" name="image" (change)="selectFile($event)"/>
       </div>
       <br>
       <div>
-        <button  (click)="onSubmit()">Upload</button>
+        <button  (click)="onSubmit()" class="main-btn">Upload</button>
       </div>
 
   </div>
+</section>
 
