--- a/xdsclient/src/styles.css
+++ b/xdsclient/src/styles.css
@@ -1,7 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+
+:root{
+    --main-color: #3a6cf4;
+}
+
+.main-btn:hover {
+    background-color: #0a49f6;
+    transform: scale(1.1);
+}
+
 .main-btn {
     color: #fff;
-    background-color: #3a6cf4;
+    background-color: var(--main-color);
     text-decoration: none;
     font-size: 1.1em;
     font-weight: 600;
@@ -9,6 +19,6 @@
     padding: 0.9375em 2.1875em;
     letter-spacing: 1px;
     border-radius: 15px;
-    margin-bottom: 40px;
+
     transition: 0.7s ease;
 }
