--- a/xdsclient/src/styles.css
+++ b/xdsclient/src/styles.css
@@ -6,19 +6,17 @@
 
 .main-btn:hover {
     background-color: #0a49f6;
-    transform: scale(1.1);
+    transform: scale(1.5);
+    border: 1px solid black;
 }
 
 .main-btn {
     color: #fff;
     background-color: var(--main-color);
-    text-decoration: none;
-    font-size: 1.1em;
-    font-weight: 600;
+    font-size: 1em;
     display: inline-block;
-    padding: 0.9375em 2.1875em;
-    letter-spacing: 1px;
+    padding: 10px 20px;
     border-radius: 15px;
-
-    transition: 0.7s ease;
+    transition: 0.5s ease;
+    border: none;
 }
