--- a/xdsclient/src/app/general/landing-page/general-landing-page/general-landing-page.component.css
+++ b/xdsclient/src/app/general/landing-page/general-landing-page/general-landing-page.component.css
@@ -11,16 +11,16 @@
 
 
 section{
-    padding: 100px 0px 50px 0px ;
+    padding: 50px 0px 20px 0px ;
 }
 
 .main {
     width: 100%;
-    min-height: 100vh;
     display: flex;
     align-items: center;
     background-color: transparent;
     justify-content: space-between;
+    margin-bottom:50px;
 }
 
 .main h2 {
@@ -32,7 +32,7 @@ section{
 .main h2 span {
     display: inline-block;
     margin-top: 10px;
-    color: #4e9eff;
+    color: var(--main-color);
     font-size: 3em;
     font-weight: 600;
 }
@@ -52,7 +52,7 @@ section{
 
 .main-btn {
     color: #fff;
-    background-color: #3a6cf4;
+    background-color: var(--main-color);
     text-decoration: none;
     font-size: 1.1em;
     font-weight: 600;
@@ -78,7 +78,7 @@ section{
 .title {
     display: flex;
     justify-content: center;
-    color: #3a6cf4;
+    color:var(--main-color);
     font-size: 2.2em;
     font-weight: 800;
     margin-bottom: 30px;
@@ -102,7 +102,7 @@ section{
 }
 
 .card .icon {
-    color: #3a6cf4;
+    color:var(--main-color);
     font-size: 8em;
     text-align: center;
 }
@@ -121,12 +121,16 @@ section{
     flex-wrap: wrap;
 }
 
-.projects {
+.projects  {
     background-color: #000016;
 }
 
 .projects .content{
     margin-top: 30px;
+}
+
+#membersl{
+    padding: 20px;
 }
 
 .project-card {
