--- a/xdsclient/src/app/user/login-page/login-page.component.css
+++ b/xdsclient/src/app/user/login-page/login-page.component.css
@@ -8,11 +8,9 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding: 1px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 50px 5px 25px rgba(0 0 0  / 70%);
+    border-radius: 20px;
 
 }
 .brand_logo_container {
@@ -21,7 +19,7 @@
     width: 170px;
     top: 20px;
     border-radius: 5%;
-    background: #3a6cf4 ;
+    background: var(--main-color);
     padding: 2px;
     text-align: center;
 }
@@ -40,11 +38,11 @@
 }
 .input-group-text {
     width: 30px;
-    background: #0089fa!important;
-    color: white !important;
-    border: 0 !important;
-    border-radius: 0.25rem 0 0 0.25rem !important;
-    align-items: center ;
+    font-size:20px;
+    background: var(--main-color);
+    color: white;
+    border-radius: 10px;
+    justify-content:center;
 }
 .input_user,
 .input_pass:focus {
@@ -53,7 +51,18 @@
 }
 
 
+.custom-checkbox .custom-control-input~.custom-control-label::before{
+    border: 1px solid var(--main-color);
+    transition:0.3s ease;
+
+}
+
+.custom-checkbox .custom-control-input:hover~.custom-control-label::before{
+    transform: scale(1.5);
+}
+
 .custom-checkbox .custom-control-input:checked~.custom-control-label::before {
-    background-color: #0089fa!important;
+    background-color:  var(--main-color);
+    border: 2px solid var(--main-color);
 
 }
