--- a/xdsclient/src/app/user/login-page/login-page.component.html
+++ b/xdsclient/src/app/user/login-page/login-page.component.html
@@ -20,7 +20,7 @@
                             </div>
                             <div class="input-group mb-2">
                                 <div class="input-group-append">
-                                    <span class="input-group-text"><i class=" fa fa-unlock-alt"></i></span>
+                                    <span class="input-group-text"><i class="fas fa-key"></i></span>
                                     <input type="password" id="userpwd-input" placeholder="password">
                                 </div>
                             </div>
@@ -34,7 +34,7 @@
                         </form>
                     </div>
                     <div class="d-flex justify-content-center mt-3 login_container">
-                        <button (click)="onSignIn()" > Sign in</button>
+                        <button class="main-btn" (click)="onSignIn()" > Sign in</button>
                     </div>
                     <div class="mt-4">
                         <div class="d-flex justify-content-center links">
