--- a/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.html
+++ b/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.html
@@ -1,31 +1,151 @@
-  
+<!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag --------
+
+<nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
+          <i class="fa fa-home"></i>
+          Home
+          <span class="sr-only">(current)</span>
+          </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <i class="fa fa-envelope-o">
+            <span class="badge badge-danger">11</span>
+          </i>
+          Link
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <i class="fa fa-envelope-o">
+            <span class="badge badge-warning">11</span>
+          </i>
+          Disabled
+        </a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fa fa-envelope-o">
+            <span class="badge badge-primary">11</span>
+          </i>
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+    </ul>
+    <ul class="navbar-nav ">
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <i class="fa fa-bell">
+            <span class="badge badge-info">11</span>
+          </i>
+          Test
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <i class="fa fa-globe">
+            <span class="badge badge-success">11</span>
+          </i>
+          Test
+        </a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+
+ -->
+
+
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/24e6fef022.js" crossorigin="anonymous"></script>
+</head>
+
 <header>
   <div>
 
     <nav class="navigation">
       <div id="nav-landing" style="display: none;">
       <a href="https://xray.physik.uni-siegen.de/home/" class="logo">
-        <img src="../../../assets/Images/logo.png">
+        <img src="../../../assets/Images/logo2.PNG">
       </a>
+      
+        
+          <i id="services" (click)="Scroll($event)" class="fas fa-glasses header-item">
+            <div>Our interests</div>
+          </i>
+       
 
-        <a id="services" (click)="Scroll($event)">Our Interests</a>
-        <a id="projects"(click)="Scroll($event)" >Our Services</a>
-        <a id="news" (click)="Scroll($event)">News</a>
-        <a id="members" (click)="Scroll($event)">Members</a>
-        <a id="contact" (click)="Scroll($event)">Contact</a>
+       
+          <i id="projects"(click)="Scroll($event)" class="fas fa-hands-helping header-item">
+            <div>Our Services</div>
+          </i>  
+          
+        
+    
+          <i id="news" (click)="Scroll($event)" class="fa fa-newspaper header-item">
+            <div>Our News</div>
+          </i> 
+      
+      
+          <i id="members" (click)="Scroll($event)" class="fa fa-users header-item">
+            <div>Our Team</div>
+          </i>  
+      
+       
+          <i id="contact" (click)="Scroll($event)" class="fa fa-phone header-item">
+            <div>Contact Us</div>
+          </i>  
+        
       </div>
       <div id="nav-other">
         <a href="https://xray.physik.uni-siegen.de/home/" class="logo">
-          <img src="../../../assets/Images/logo.png">
+          <img src="../../../assets/Images/logo2.PNG">
         </a>
-        <a href="#" >Home</a>
+     
+        <i href="#" class="fas fa-home header-item">
+          <div>
+          <a href="#">
+            Home
+        </a>
+      </div>
+      </i>
       </div>
 
     </nav>
   </div>
   <div>
     <button type="button" (click)="OpenUserMenu()" class="btn btn-circle btn-md dropdown" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      <i class="fa fa-user fa-2x"></i>
+      <i class="fa fa-user fa-2x">
+        <span class="badge badge-danger">
+          <i class="fas fa-ban"></i>
+        </span>
+      </i>
     </button>
     <div id="userMenuContents" class="dropdown-content" style="display: none;">
       <div class="dropdown">
@@ -43,7 +163,7 @@
     </div>
   </div>
 
-</header>
+</header> 
 
 <!-- 
 
