--- a/xdsclient/src/assets/components/dashboaerd-pages/add-new-dataset-dashboard/add-new-dataset-dashboard.component.html
+++ b/xdsclient/src/assets/components/dashboaerd-pages/add-new-dataset-dashboard/add-new-dataset-dashboard.component.html
@@ -28,6 +28,11 @@
       </div>
   </div>
 </section>
+<section id="data_structure" class="disabled">
+  <hr class="rounded">
+  <h2 class="title">Data structure details</h2>
+  <button class="main-btn" (click)="DataStructureDetailsIsReady()">Next</button>
+</section>
 <!-- <section class="disabled"> -->
 <section id="details_section" class="disabled">
   <hr class="rounded">
