--- a/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.html
+++ b/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.html
@@ -88,7 +88,7 @@
 
 <header>
   <div>
-
+      
     <nav class="navigation">
       <div id="nav-landing" style="display: none;">
       <a href="https://xray.physik.uni-siegen.de/home/" class="logo">
@@ -142,8 +142,8 @@
   <div>
     <button type="button" (click)="OpenUserMenu()" class="btn btn-circle btn-md dropdown" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <i class="fa fa-user fa-2x">
-        <span class="badge badge-danger">
-          <i class="fas fa-ban"></i>
+        <span id="logB" class="badge badge-danger">
+          <i id="logS" class="fas fa-ban"></i>
         </span>
       </i>
     </button>
