--- a/xdsclient/src/assets/components/xds-footer-signature/xds-footer-signature.component.html
+++ b/xdsclient/src/assets/components/xds-footer-signature/xds-footer-signature.component.html
@@ -12,8 +12,8 @@
     </div>
       <div class="slide"><img src="https://www.uni-siegen.de/presse/relaunch/downloads/cd/fakiv_wort_rgb_130.jpg?lang=de"></div>
       <div class="slide"><img src="../../../assets/Images/xfel.png"></div>
-      <div class="slide"><img src="../../Images/img2.JPG"></div>
-      <div class="slide"><img src="../../Images/img2.JPG"></div>
-      <div class="slide"><img src="../../Images/img2.JPG"></div>
+      <div class="slide"><img src=".../../../assets/Images/xfel.png"></div>
+      <div class="slide"><img src=".../../../assets/Images/xfel.png"></div>
+      <div class="slide"><img src="../../../assets/Images/xfel.png"></div>
       
 </div>
