--- a/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.html
+++ b/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.html
@@ -128,9 +128,9 @@
           <img src="../../../assets/Images/logo2.PNG">
         </a>
      
-        <i href="#" class="fas fa-home header-item">
+        <i  class="fas fa-home header-item">
           <div>
-          <a href="#">
+          <a href="/home">
             Home
         </a>
       </div>
@@ -155,7 +155,7 @@
           </i>
         </a> 
         <a class="fa fa-cog" href="#">
-          <i  >
+          <i >
             Setting
           </i>
         </a>
